# SportsTrackingTransformer

./: .dvcignore  .gitattributes  .gitignore  PAPER_TODOS.md  README.md  dvc.yaml  pipeline.md  pyproject.toml  validate_flops.py
.dvc/: config
data/: .gitignore  .gitkeep  team_colors.csv
models/: .gitignore
paper/: .gitignore  Attention is All You Need, for Sports Tracking Data.tex  references.bib
results/: README.md  RESULTS.md  animated_results_visualization.ipynb  model_comparison.json  results.csv  results.json  results_analysis.ipynb
src/: __init__.py  datasets.py  generate_results_summary.py  metrics.py  models.py  pick_best_models.py  pred_analysis.ipynb  prep_data.py  results_analysis.ipynb  sandbox.ipynb  train.py
src/bigdatabowltransformerdemo/: __main__.py  datasets.py  models.py  pred_analysis.ipynb  prep_data.py  train.py
