[project]
name = "bigdatabowltransformerdemo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Udit Ranasaria", email = "udit.ranasaria@sumersports.com" }
]
dependencies = [
    "torch>=2.3.0",
    "polars[numpy,pandas,plot,pyarrow]>=0.20.23",
    "lightning>=2.2.4",
    "tensorboard>=2.16.2",
    "dvc>=3.50.1",
    "kaggle>=1.6.12",
    "tqdm>=4.66.3",
    "pandarallel>=1.6.5",
    "tensorboardx>=2.6.2.2",
    "torch-tb-profiler>=0.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bigdatabowltransformerdemo" = "bigdatabowltransformerdemo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "uv>=0.1.39",
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bigdatabowltransformerdemo"]

[tool.ruff]
line-length = 120
indent-width = 4

exclude = [".pynb", ".ipynb_checkpoints"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["W191", "E111", "E266", "E114", "E117", "E741"]
