[project]
name = "sports-tracking-transformer"
version = "0.1.0"
description = "Demo repository showcasing Transformer model architecture for sports tracking data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.3.0",
    "polars[numpy,pandas,plot,pyarrow,style]>=1.5.0",
    "lightning>=2.4.0",
    "dvc>=3.54.1",
    "tqdm>=4.66.5",
    "ipykernel>=6.29.5",
    "ruff>=0.6.3",
    "torch-tb-profiler>=0.4.3",
    "seaborn>=0.13.2",
    "plotly>=5.24.0",
    "nbformat>=5.10.4",
    "calflops>=0.3.2",
    "transformers>=4.57.1",
    "tensorboard>=2.17.1",
    "zstd>=1.5.7.2",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [".ipynb", ".ipynb_checkpoints"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["W191", "E111", "E266", "E114", "E117", "E741"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
